org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestNotMethodName.java
package invalid;

public class TestNotMethodName {
	private static Class thisClass= TestNotMethodName.class;
	static {
        System.out.println(/*]*/thisClass/*[*/);
	}
}
